--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,7 +1,4 @@
-doctype html 
-html 
-    head 
-        title Trang chủ
+extends ../../layouts/default.pug
 
-    body 
-        h1 Sản phẩm
+block main
+        h1 DS sản phẩm
