--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -31,3 +31,15 @@
     left: 150px;
     width: calc(100%-180px);
 }
+.sider .inner-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sider .inner-menu ul li a {
+    color: #fff;
+    display: block;
+    padding: 6px 10px;
+    border-bottom: 1px solid #515151;
+}
